<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lAContact"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:lottie_rawRes="@raw/contact"
                app:lottie_repeatCount="50"
                app:lottie_repeatMode="reverse" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/app_display"
                android:textAlignment="center"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_contact_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:drawableLeft="@drawable/ic_person"
                    android:inputType="text"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"

                android:hint="@string/app_contact_phone_number"
                android:inputType="phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"

                android:hint="@string/app_contact_email"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/app_contact_address"
                android:inputType="textPostalAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_house"
                    android:drawablePadding="10dp"
                    android:id="@+id/editTxtPostalAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_contact_zip"
                android:inputType="number"
                android:minHeight="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_zip"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_contact_city"
                android:inputType="text"
                android:minHeight="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_contact_country"
                android:inputType="text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_country"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_contact_organization"
                android:inputType="text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtOrganization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_organization"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/layoutProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/app_contact_profession"
                android:inputType="text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_profession"
                    android:drawablePadding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_btn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/custom_button"
                app:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>
</ScrollView>